Generics fixes, java-doc minor fixes

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
     <packaging>pom</packaging>
 
     <name>DTO Generator</name>
-    <description>DTO Generator makes it easy to create POJOs containing random data generated according to given rules
-    </description>
+    <description>Java library for simple and flexible data generation inside java objects (DTO/POJO)</description>
     <url>https://github.com/ivalitov/dto-generator</url>
 
     <modules>
