--- a/dto-generator-examples/pom.xml
+++ b/dto-generator-examples/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.laoruga</groupId>
         <artifactId>dto-generator-parent</artifactId>
-        <version>0.4.2-alpha-SNAPSHOT</version>
+        <version>1.0.0-beta</version>
     </parent>
 
     <packaging>jar</packaging>
